# glframe

./: .gitignore  CMakeLists.txt  Makefile  README.md  glhelpers.hpp
backup/: glhelpers.hpp
examples/: example  main.cpp
examples/assets/: cube.dae  framebot.dae
examples/assets/cat/: concrete_cat_statue_2k.blend  concrete_cat_statue_2k.blend1
examples/assets/donut/: donut.blend  donut.dae
examples/assets/table/: table.dae
src/: Buffers.cpp  Buffers.hpp  Camera.cpp  Camera.hpp  Display.cpp  Display.hpp  Entity.cpp  Entity.hpp  GLframe.hpp  LightSource.cpp  LightSource.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Tracker.cpp  Tracker.hpp  Util.cpp  Util.hpp  glframe.hpp
template-project/: Makefile  frag.shader  main.cpp  vert.shader
template-project/assets/: cubething.dae  suzanne.dae
